--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I work in digital marketing... for now</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Saginaw, MI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Home Improvement, Sports (watching and playing), and scrolling through adoptable dogs in my area.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Front End Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Midland, MI</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>There is just so much opportunity and so many different roles to play.</p>
     </section>
 
     <footer id="footer">
